# Open1560

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md  debug_ar.py  parse_ar.py  premake-vs2026.bat  premake5.lua  unpack_ar.py
code/: CMakeLists.txt  premake5.lua
code/midtown/: CMakeLists.txt  arts_pch.h  game_stubs.S  game_stubs.cpp  midtown.cpp  premake5.lua
code/midtown/agi/: agilib.h  cmodelx.cpp  cmodelx.h  getdlp.cpp  lmodel.cpp  pipeline.cpp  pipeline.h  render.cpp  screenshot.cpp  surface.cpp  texdef.cpp  viewport.cpp
code/midtown/agigl/: glcontext.cpp  glpipe.cpp  glpipe.h  glrsys.cpp  glstream.cpp  gltexdef.cpp
code/midtown/agirend/: bilight.cpp  bilight.h  bilmodel.cpp  bilmodel.h  surfrender.cpp  zbrender.cpp
code/midtown/agisdl/: sdlpipe.cpp  sdlswpipe.cpp
code/midtown/agiworld/: getmesh.cpp  meshrend.cpp  texsheet.cpp  texsort.cpp
code/midtown/arts7/: camera.cpp  cullmgr.cpp  dof.cpp  dof.h  node.cpp  sim.cpp
code/midtown/core/: defines.h  minwin.h  minwin_linux.h  platform.h  string.cpp  string.h
code/midtown/data7/: callback.h  ipc.cpp  metatype.cpp  printer.cpp  str.h  utimer.cpp
code/midtown/eventq7/: sdlevent.cpp  sdlevent.h
code/midtown/memory/: alloca.h  allocator.cpp  stack.cpp  stack.h  stub.cpp  stub.h
code/midtown/mmaudio/: cd.cpp  dsglobal.cpp
code/midtown/mmbangers/: banger.cpp  data.h
code/midtown/mmcity/: inst.cpp  loader.cpp  loader.h
code/midtown/mmcityinfo/: playerdata.cpp  playerdir.cpp  vehinfo.cpp  vehlist.cpp
code/midtown/mmeffects/: card2d.cpp  card2d.h  mmtext.cpp  mmtext_freetype.cpp  mmtext_win32.cpp  vehform.cpp  vehform.h
code/midtown/mmgame/: interface.cpp  interface.h
code/midtown/mmnetwork/: network.cpp  network.h
code/midtown/mmphysics/: inertia.h
code/midtown/mmui/: driver.cpp  driver.h  main.cpp  main.h  options.cpp  placeholder_opts.cpp  placeholder_opts.h  pu_menu.cpp  quitmenu.cpp  quitmenu.h  vehicle.cpp  vehicle.h  vselect.cpp  vselect.h  vshow.cpp
code/midtown/mmvid/: videoplayer.cpp  videoplayer.h
code/midtown/mmwidget/: bm_button.cpp  bm_button.h  dropdown.cpp  dropdown.h  icon.cpp  icon.h  manager.cpp  menu.cpp  menu.h  navbar.cpp  navbar.h  pointer.cpp  tdwidget.cpp  tdwidget.h  textdrop.cpp  textdrop.h  widget.cpp  wstore.cpp
code/midtown/pcwindis/: dxinit.cpp  sdldinput.cpp
code/midtown/vector7/: matrix34.cpp  vector3.cpp
extra/: gen_masm.py
